--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.sql.init.continue-on-error=true
+# Fixer IO
+fixerio.url=http://data.fixer.io/api/latest?access_key=
+fixerio.apiaccesskey=
+# Others
+spring.jpa.hibernate.ddl-auto=none
+spring.jackson.default-property-inclusion=NON_NULL
+logging.level.com.hendisantika=debug
+spring.jpa.show-sql=true
